crates/analyzer/tests/snapshots/errors__non_pub_init.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `__init__` function is not public
  ┌─ compile_errors/non_pub_init.fe:2:5
  │
2 │     fn __init__() {}
  │     ^^^^^^^^^^^^^^^^ `__init__` function must be public
  │
  = Hint: Add the `pub` modifier.
  = Example: `pub fn __init__():`


